Fixed Horizontal Scrolling Bug

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -33,6 +33,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .link-style{
