--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+* {
+  box-sizing: inherit;
+}
+
 html{
   display: flex;
   justify-content: center;
   margin: 0;
+  max-width: 100vw;
   min-width: 100vw;
+  box-sizing: border-box;
 }
 
 body{
@@ -13,10 +19,14 @@ body{
   background-size: cover;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 #root {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
